# license_recognition

./: .gitignore  README.md  pyproject.toml  test.py  test_filter.py  test_license.py  testing.py
src/: add_missing_data.py  find_cameras.py  interface.py  main.py  pipeline.py  real_time_detection.py  utils.py  visualize.py
train/: args.yaml  events.out.tfevents.1741558391.ROB-PC.8319.0  license_train.ipynb  results.csv
