[project]
name = "license-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "filterpy>=1.4.5",
    "lap>=0.5.12",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.92",
]
